@@ -1,10 +1,13 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.865 2011-02-27 22:59:21 guru Exp $
+	$Id: ChangeLog,v 1.866 2011-02-28 02:12:25 remko Exp $
 -----------------------------------------------------------------------------------------
 2011-03-01	pwessel
 	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4
 	  GMT5 branch merged to new trunk and converted to subversion.
 -----------------------------------------------------------------------------------------
+
+2011-02-28	remko
+	* doc/* examples/*:	Run documentation and tests now as it is done in GMT5.
 
 2011-02-27	pwessel
 	* gmt_init.c:		Processing of mathangle symbol (-Sm[bfl]) confused the unit detector.
